# FaceFinder

./: .gitignore  Cargo.toml  pyproject.toml
src/python/facefinder/: __init__.py  finder.py  interact.py  metadata.py  metrics.py  prompting.py  search.py
src/rust/: lib.rs
